@@ -21,6 +21,7 @@ import com.epam.deltix.gflog.api.LogFactory;
 
 import javax.tools.JavaCompiler;
 import javax.tools.ToolProvider;
+import java.lang.reflect.InvocationTargetException;
 
 /**
  * Verify that runtime included java compiler.
@@ -37,8 +38,8 @@ public class JavaVerifier {
         try {
             Class<? extends JavaCompiler> c = Class.forName(toolsJarClassLoader, false,
                     Thread.currentThread().getContextClassLoader()).asSubclass(JavaCompiler.class);
-            compiler = c.newInstance();
-        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+            compiler = c.getDeclaredConstructor().newInstance();
+        } catch (NoSuchMethodException | InvocationTargetException | ClassNotFoundException | IllegalAccessException | InstantiationException e) {
             compiler = ToolProvider.getSystemJavaCompiler();
         }
         return compiler;
